# server/api/v1/connect_services.go
@@ -534,6 +534,14 @@ func (s *ConnectServiceHandler) GetSpace(ctx context.Context, req *connect.Reque
 	return connect.NewResponse(resp), nil
 }
 
+func (s *ConnectServiceHandler) GetOrCreateSpaceScratchpad(ctx context.Context, req *connect.Request[v1pb.GetOrCreateSpaceScratchpadRequest]) (*connect.Response[v1pb.Space], error) {
+	resp, err := s.APIV1Service.GetOrCreateSpaceScratchpad(ctx, req.Msg)
+	if err != nil {
+		return nil, convertGRPCError(err)
+	}
+	return connect.NewResponse(resp), nil
+}
+
 func (s *ConnectServiceHandler) UpdateSpace(ctx context.Context, req *connect.Request[v1pb.UpdateSpaceRequest]) (*connect.Response[v1pb.Space], error) {
 	resp, err := s.APIV1Service.UpdateSpace(ctx, req.Msg)
 	if err != nil {
